added invite btn to menu and for churches... added get course btn to training page

--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -267,7 +267,7 @@ $pink: #ff34ba;
           }
         }
         h1 {
-          text-align: left;
+          text-align: center;
           font-family: $DM;
           font-size: 90px;
         }
