--- a/src/Scss/Main.scss
+++ b/src/Scss/Main.scss
@@ -1,5 +1,5 @@
-$DM: "DM Serif Display", serif;
-$Archivo: "Archivo", sans-serif;
+$DM: 'DM Serif Display', serif;
+$Archivo: 'Archivo', sans-serif;
 $teal: #009ba7;
 $grey: #a9a6a6;
 $blue: #0aa7ff;
@@ -138,7 +138,7 @@ footer {
         text-transform: capitalize;
         width: 60%;
         margin: 0 auto 1rem auto;
-        font-size: 1.1rem;
+        font-size: 1rem;
         line-height: 1.5rem;
       }
     }
@@ -190,7 +190,7 @@ footer {
     #footerImg {
       width: 100%;
       height: 80vh;
-      background: url("../Assets/leaf.svg");
+      background: url('../Assets/leaf.svg');
       background-position: -20% 90%;
       background-size: center;
       background-repeat: no-repeat;
@@ -202,7 +202,7 @@ footer {
         margin-left: 1rem;
         width: 100px;
         height: 100px;
-        background: url("../Assets/whiteLogo.svg");
+        background: url('../Assets/whiteLogo.svg');
         background-position: center;
         background-size: cover;
       }
@@ -219,6 +219,73 @@ footer {
           color: whitesmoke;
           font-size: 1.2rem;
           text-transform: capitalize;
+        }
+      }
+    }
+  }
+}
+// Tablet
+
+@media only screen and (min-device-width: 800px) and (max-device-width: 1280px) {
+  footer {
+    #programs {
+      grid-template-columns: 2.5fr 1.2fr;
+      #programTitle {
+      }
+      #programButton {
+        #programLink {
+          p {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+// Mobile
+@media only screen and (min-device-width: 300px) and (max-device-width: 800px) {
+  footer {
+    #programs {
+      display: flex;
+      flex-direction: column;
+      #programTitle {
+      }
+      #programButton {
+        margin-top: 1rem;
+        #programLink {
+          p {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+
+    #newsletter {
+      #heading {
+        h2 {
+          font-size: 2rem;
+        }
+        p {
+          width: 90%;
+        }
+      }
+      form {
+        width: 90%;
+      }
+    }
+
+    #mainFooter {
+      #footerImg {
+        height: 40vh;
+        background-size: 100%;
+      }
+      #footerBoxes {
+        display: flex;
+        flex-direction: column;
+        #footerLogo {
+        }
+        .footerBox {
         }
       }
     }
