--- a/src/Components/VideoModal/VideoModal.scss
+++ b/src/Components/VideoModal/VideoModal.scss
@@ -7,9 +7,21 @@
   left: 0;
   z-index: 10;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  cursor: crosshair;
+  cursor: not-allowed;
+  #closeVideo {
+    height: 50px;
+    width: 100px;
+    background: rgba(0, 155, 167, 0.56);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    cursor: pointer;
+  }
 
   #videoPlayer {
     height: 75vh;
