--- a/src/Scss/userTag.scss
+++ b/src/Scss/userTag.scss
@@ -4,7 +4,7 @@ $Archivo: 'Archivo', sans-serif;
   background: green;
   width: max-content;
   padding: 0.5rem 1rem;
-  width: 130px;
+  width: max-content;
   font-family: $Archivo;
   font-size: 15px;
   font-weight: bold;
