--- a/src/Components/PopUp/Popup.scss
+++ b/src/Components/PopUp/Popup.scss
@@ -13,7 +13,7 @@ $Archivo: 'Archivo', sans-serif;
   z-index: 2;
 
   #popUp {
-    height: 681px;
+    height: max-content;
     width: 784px;
 
     padding: 1rem 2rem;
@@ -74,14 +74,50 @@ $Archivo: 'Archivo', sans-serif;
   margin-left: -2rem;
   margin-top: 4rem;
 }
+.popupNav {
+  .welcome {
+    display: flex;
+    align-items: center;
+    // justify-content: flex-start;
+    .popupImg {
+      height: 100px;
+      width: 100px;
+      background: url(../../Assets/icons/owner.svg);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      border-radius: 300px;
+      margin-top: 1rem;
+    }
+    h2 {
+      text-transform: capitalize;
+      text-align: center;
+      padding-left: 2rem;
+    }
+  }
+  .navLinks {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+    .nav_btn {
+      height: max-content;
+      width: max-content;
+      background: #009ba7;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    .YT_btn {
+      background: #ff0000;
+    }
+  }
+}
 
-.popupImg {
-  height: 100px;
-  width: 100px;
-  background: url(../../Assets/icons/owner.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  border-radius: 300px;
-  margin-top: 1rem;
+@media only screen and (min-device-width: 300px) and (max-device-width: 800px) {
+  .popupNav {
+    display: none;
+  }
 }
