improved functionality of programmes pages

--- a/src/Components/Programs/Programmes.scss
+++ b/src/Components/Programs/Programmes.scss
@@ -34,7 +34,7 @@
       .programSelection {
         height: 3rem;
         width: max-content;
-        background: #009ba7;
+        // background: #009ba7;
         margin-left: 2rem;
         padding: 0 2rem;
         border-radius: 10px;
@@ -52,11 +52,11 @@
         color: #ffffff;
         cursor: pointer;
       }
-      #current {
-      }
-      #past {
-        background: rgba(0, 155, 167, 0.6);
-      }
+      // #current {
+      // }
+      // #past {
+      //   background: #009ba799;
+      // }
     }
 
     #AvailiableProgrammes {
