--- a/src/Scss/Main.scss
+++ b/src/Scss/Main.scss
@@ -9,7 +9,8 @@ $yellow: #ffba0a;
 #mainpage {
   width: 90%;
   margin: 0 auto;
-  user-select: none;
+  max-width: 1450px;
+  // user-select: none;
 }
 
 header {
@@ -18,6 +19,7 @@ header {
   align-items: center;
   margin-bottom: 3rem;
   padding: 2rem 0;
+  user-select: none;
   img {
     width: 80px;
     transform: scale(1.5);
