changed pages themecolor, added footer logo and added 3 youtube videos

--- a/src/Components/TopicCard/TopicCard.scss
+++ b/src/Components/TopicCard/TopicCard.scss
@@ -1,4 +1,4 @@
-$publicSpeakingOrange: #ff6725;
+$publicSpeakingOrange: #009ba7;
 #orangeTag {
   background: $publicSpeakingOrange;
   width: 100px;
