--- a/src/pages/Carers/Carers.scss
+++ b/src/pages/Carers/Carers.scss
@@ -8,7 +8,7 @@ $Archivo: 'Archivo', sans-serif;
 
 $teal: #009ba7;
 $grey: #a9a6a6;
-$blue: #0aa7ff;
+$carersPrimaryColor: #cac492;
 $purple: #ff0ac9;
 $yellow: #ffba0a;
 
@@ -31,7 +31,7 @@ $yellow: #ffba0a;
       .quote_dash {
         height: 0.75rem;
         width: 50px;
-        background: $blue;
+        background: $carersPrimaryColor;
         margin-right: 1rem;
       }
       #quoteSource {
@@ -60,7 +60,7 @@ $yellow: #ffba0a;
       margin-bottom: 4rem;
     }
     #watchStory {
-      background: #bce7ff;
+      background: #cac492;
       height: 64px;
       width: 248px;
       display: flex;
@@ -72,7 +72,7 @@ $yellow: #ffba0a;
       .icon {
         height: '50px';
         width: '50px';
-        background-image: url(../../Assets/icons/bluePlayBtn.svg);
+        background-image: url(../../Assets/icons/tealPlayBtn.svg);
         @include BGConfig(80%, center);
       }
 
@@ -105,7 +105,7 @@ $yellow: #ffba0a;
   border-radius: 10px;
 
   .bgLayer {
-    background: rgba(10, 165, 255, 0.8);
+    background: #cac49285;
     width: 100%;
     padding: 1rem 2rem;
     border-radius: 10px;
@@ -114,7 +114,7 @@ $yellow: #ffba0a;
   #heartIcon {
     height: 100px;
     width: 100px;
-    background: url(../../Assets/icons/heartIcon.svg);
+    background: url(../../Assets/icons/tealHeartIcon.svg);
     @include BGConfig(100%, center);
     // margin-top: 6rem;
   }
@@ -161,7 +161,7 @@ $yellow: #ffba0a;
       bottom: 10px;
       width: 50px;
       height: 10px;
-      background: $blue;
+      background: $carersPrimaryColor;
       border-radius: 10px;
     }
   }
@@ -181,8 +181,8 @@ $yellow: #ffba0a;
     display: flex;
     justify-content: space-between;
     padding-top: 2rem;
-    .blueTag {
-      background: $blue;
+    .carersPrimaryColorTag {
+      background: $carersPrimaryColor;
       width: 100px;
       height: 36px;
     }
@@ -234,7 +234,7 @@ $yellow: #ffba0a;
         align-items: center;
         width: 469px;
         height: 76px;
-        background: $blue;
+        background: $carersPrimaryColor;
         border-radius: 900px;
         color: white;
         cursor: pointer;
