--- a/src/Scss/exploreBtn.scss
+++ b/src/Scss/exploreBtn.scss
@@ -1,5 +1,5 @@
-$teal: #009ba7;
-$Archivo: "Archivo", sans-serif;
+$teal: #009b9b;
+$Archivo: 'Archivo', sans-serif;
 #btn {
   background: $teal;
   width: max-content;
