--- a/src/Components/PopUp/Popup.scss
+++ b/src/Components/PopUp/Popup.scss
@@ -1,4 +1,5 @@
 $Archivo: 'Archivo', sans-serif;
+$teal: #009b9b;
 
 #bg_Blur {
   display: none;
@@ -25,7 +26,7 @@ $Archivo: 'Archivo', sans-serif;
       border-radius: 300px;
       transition: all 0.05s;
       cursor: pointer;
-      background: url(../../Assets/icons/cancel.svg), #009ba7;
+      background: url(../../Assets/icons/cancel.svg), $teal;
       background-position: center;
       background-size: 30%;
       background-repeat: no-repeat;
@@ -90,7 +91,6 @@ $Archivo: 'Archivo', sans-serif;
       margin-top: 1rem;
     }
     h2 {
-      text-transform: capitalize;
       text-align: center;
       padding-left: 2rem;
     }
@@ -103,7 +103,7 @@ $Archivo: 'Archivo', sans-serif;
     .nav_btn {
       height: max-content;
       width: max-content;
-      background: #009ba7;
+      background: $teal;
       color: white;
       padding: 0.5rem 1rem;
       border-radius: 10px;
