--- a/src/Components/TopicCard/TopicCard.scss
+++ b/src/Components/TopicCard/TopicCard.scss
@@ -1,6 +1,6 @@
-$publicSpeakingOrange: #009ba7;
+$teal: #009b9b;
 #orangeTag {
-  background: $publicSpeakingOrange;
+  background: $teal;
   width: 100px;
   height: 36px;
 }
@@ -17,7 +17,6 @@ $publicSpeakingOrange: #009ba7;
   font-weight: normal;
   font-size: 33px;
   line-height: 59px;
-  text-transform: capitalize;
   color: #000000;
   margin-top: -1rem;
 }
