--- a/src/Scss/syllabusCard.scss
+++ b/src/Scss/syllabusCard.scss
@@ -1,3 +1,4 @@
+$teal: #009b9b;
 .CardTitle {
   // display: none;
 }
@@ -9,7 +10,7 @@
   margin-bottom: 2rem;
 
   .CardTitle {
-    background: #009ba7;
+    background: $teal;
     box-shadow: 0px 0px 40px 4px rgba(0, 0, 0, 0.04);
     border-radius: 12px;
     width: 215px;
