--- a/src/pages/Carers/Carers.scss
+++ b/src/pages/Carers/Carers.scss
@@ -6,7 +6,7 @@
 $DM: 'DM Serif Display', serif;
 $Archivo: 'Archivo', sans-serif;
 
-$teal: #009ba7;
+$teal: #009b9b;
 $grey: #a9a6a6;
 $carersPrimaryColor: #cac492;
 $purple: #ff0ac9;
@@ -54,7 +54,6 @@ $yellow: #ffba0a;
       font-weight: normal;
       font-size: 22px;
       line-height: 31px;
-      text-transform: capitalize;
       width: 80%;
       color: rgba(0, 0, 0, 0.66);
       margin-bottom: 4rem;
@@ -105,26 +104,26 @@ $yellow: #ffba0a;
   border-radius: 10px;
 
   .bgLayer {
-    background: #cac49285;
+    background: $carersPrimaryColor;
     width: 100%;
     padding: 1rem 2rem;
     border-radius: 10px;
-    padding-bottom: 10rem;
+    padding-bottom: 4rem;
+    height: max-content;
   }
-  #heartIcon {
-    height: 100px;
-    width: 100px;
-    background: url(../../Assets/icons/tealHeartIcon.svg);
-    @include BGConfig(100%, center);
-    // margin-top: 6rem;
-  }
+  // #heartIcon {
+  //   height: 100px;
+  //   width: 100px;
+  //   background: url(../../Assets/icons/tealHeartIcon.svg);
+  //   @include BGConfig(100%, center);
+  //   // margin-top: 6rem;
+  // }
   p {
     font-family: $Archivo;
     font-style: normal;
     font-weight: normal;
     font-size: 26.4px;
     line-height: 47.2px;
-    text-transform: capitalize;
     color: #ffffff;
     margin: 2rem 0;
   }
@@ -137,11 +136,10 @@ $yellow: #ffba0a;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.178);
   border-radius: 12px;
   padding: 1rem 2rem;
-  margin: -8rem 0 0 2rem;
+  margin: -4rem 0 0 2rem;
   p {
     font-size: 23px;
     line-height: 41px;
-    text-transform: capitalize;
     color: rgba(0, 0, 0, 0.49);
   }
   h1 {
@@ -149,7 +147,6 @@ $yellow: #ffba0a;
     font-weight: normal;
     font-size: 55px;
     line-height: 98px;
-    text-transform: capitalize;
     color: #000000;
     position: relative;
     margin-bottom: 1rem;
@@ -175,7 +172,6 @@ $yellow: #ffba0a;
     font-weight: normal;
     font-size: 55px;
     line-height: 98px;
-    text-transform: capitalize;
   }
   .courses {
     display: flex;
@@ -203,7 +199,6 @@ $yellow: #ffba0a;
         font-weight: normal;
         font-size: 33px;
         line-height: 41px;
-        text-transform: capitalize;
         color: #000000;
         margin-bottom: 1rem;
       }
@@ -212,7 +207,6 @@ $yellow: #ffba0a;
         font-weight: normal;
         font-size: 15px;
         line-height: 27px;
-        text-transform: capitalize;
         color: rgba(0, 0, 0, 0.58);
         margin-bottom: 1rem;
       }
@@ -223,9 +217,8 @@ $yellow: #ffba0a;
           font-weight: normal;
           font-size: 22px;
           line-height: 27px;
-          text-transform: capitalize;
           color: #000000;
-          list-style: url(../../Assets/icons/blueHyphen.svg);
+          list-style: url(../../Assets/icons/hyphen.svg);
         }
       }
       .getCourse {
@@ -243,7 +236,6 @@ $yellow: #ffba0a;
         font-weight: 500;
         font-size: 25px;
         line-height: 31px;
-        text-transform: capitalize;
         color: #ffffff;
       }
     }
