--- a/src/pages/PublicSpeaking/PublicSpeaking.scss
+++ b/src/pages/PublicSpeaking/PublicSpeaking.scss
@@ -6,13 +6,13 @@
 $DM: 'DM Serif Display', serif;
 $Archivo: 'Archivo', sans-serif;
 
-$teal: #009ba7;
+$teal: #009b9b;
 $grey: #a9a6a6;
 $blue: #0aa7ff;
 $purple: #ff0ac9;
 $yellow: #ffba0a;
 // $churchPagePurple: #b00aff;
-$publicSpeakingOrange: #cac492;
+$gold: #cac492;
 
 @mixin BGConfig($size, $position) {
   background-position: $position;
@@ -33,7 +33,7 @@ $publicSpeakingOrange: #cac492;
       .quote_dash {
         height: 0.75rem;
         width: 50px;
-        background: $publicSpeakingOrange;
+        background: $gold;
         margin-right: 1rem;
       }
       #quoteSource {
@@ -56,13 +56,12 @@ $publicSpeakingOrange: #cac492;
       font-weight: normal;
       font-size: 22px;
       line-height: 31px;
-      text-transform: capitalize;
       width: 80%;
       color: rgba(0, 0, 0, 0.66);
       margin-bottom: 4rem;
     }
     #watchStory {
-      background: $publicSpeakingOrange;
+      background: $gold;
       height: 64px;
       width: 248px;
       display: flex;
@@ -105,26 +104,25 @@ $publicSpeakingOrange: #cac492;
   border-radius: 10px;
 
   .bgLayer {
-    background: #cac49285;
+    background: $gold;
     width: 100%;
     padding: 1rem 2rem;
     border-radius: 10px;
-    padding-bottom: 10rem;
+    padding-bottom: 4rem;
   }
-  #heartIcon {
-    height: 100px;
-    width: 100px;
-    background: url(../../Assets/icons/tealHeartIcon.svg);
-    @include BGConfig(100%, center);
-    // margin-top: 6rem;
-  }
+  // #heartIcon {
+  //   height: 100px;
+  //   width: 100px;
+  //   background: url(../../Assets/icons/tealHeartIcon.svg);
+  //   @include BGConfig(100%, center);
+  //   // margin-top: 6rem;
+  // }
   p {
     font-family: $Archivo;
     font-style: normal;
     font-weight: normal;
     font-size: 26.4px;
     line-height: 47.2px;
-    text-transform: capitalize;
     color: #ffffff;
     margin: 2rem 0;
   }
@@ -137,15 +135,15 @@ $publicSpeakingOrange: #cac492;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.178);
   border-radius: 12px;
   padding: 1rem 2rem;
-  margin: -8rem 0 0 2rem;
+  margin: -4rem 0 0 2rem;
   ul {
     li {
       font-style: normal;
       font-weight: normal;
       font-size: 23px;
       line-height: 41px;
-      text-transform: capitalize;
       color: rgba(0, 0, 0, 0.49);
+      // list-style: url(../../Assets/icons/hyphen.svg);
       list-style: outside;
       margin-bottom: 2rem;
     }
@@ -155,7 +153,6 @@ $publicSpeakingOrange: #cac492;
     font-weight: normal;
     font-size: 55px;
     line-height: 55px;
-    text-transform: capitalize;
     color: #000000;
     position: relative;
     margin-bottom: 3rem;
@@ -167,7 +164,7 @@ $publicSpeakingOrange: #cac492;
       bottom: -1rem;
       width: 50px;
       height: 10px;
-      background: $publicSpeakingOrange;
+      background: $gold;
       border-radius: 10px;
     }
   }
@@ -186,7 +183,6 @@ $publicSpeakingOrange: #cac492;
         font-weight: normal;
         font-size: 55px;
         line-height: 98px;
-        text-transform: capitalize;
         color: #000000;
         margin-bottom: 2rem;
       }
@@ -196,9 +192,8 @@ $publicSpeakingOrange: #cac492;
           font-weight: normal;
           font-size: 22px;
           line-height: 27px;
-          text-transform: capitalize;
           margin-bottom: 1.5rem;
-          list-style: url(../../Assets/icons/orangeHyphen.svg);
+          list-style: url(../../Assets/icons/hyphen.svg);
           margin-left: 1rem;
         }
       }
@@ -220,10 +215,10 @@ $publicSpeakingOrange: #cac492;
     font-weight: normal;
     font-size: 28px;
     line-height: 51px;
-    text-transform: capitalize;
+    padding: 0 1rem;
     color: #ffffff;
     height: max-content;
-    background: $publicSpeakingOrange;
+    background: $gold;
     height: 255px;
     border-radius: 22px;
   }
@@ -242,7 +237,6 @@ $publicSpeakingOrange: #cac492;
       font-weight: normal;
       font-size: 55px;
       line-height: 98px;
-      text-transform: capitalize;
       color: #000000;
     }
     #topicCard {
@@ -256,7 +250,7 @@ $publicSpeakingOrange: #cac492;
       // width: 50%;
       min-width: 801px;
       height: 763px;
-      background: $publicSpeakingOrange;
+      background: $gold;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
       padding: 2rem;
@@ -266,7 +260,6 @@ $publicSpeakingOrange: #cac492;
         font-weight: normal;
         font-size: 55px;
         line-height: 55px;
-        text-transform: capitalize;
         margin-bottom: 2rem;
       }
       p {
@@ -275,7 +268,6 @@ $publicSpeakingOrange: #cac492;
         font-weight: normal;
         font-size: 29px;
         line-height: 52px;
-        text-transform: capitalize;
       }
     }
     #churchTopic {
@@ -283,9 +275,8 @@ $publicSpeakingOrange: #cac492;
       h3 {
         width: 482px;
         font-weight: normal;
-        font-size: 55px;
-        line-height: 63px;
-        text-transform: capitalize;
+        font-size: 50px;
+        line-height: 60px;
         color: #000000;
         margin-bottom: 3rem;
         position: relative;
@@ -297,7 +288,7 @@ $publicSpeakingOrange: #cac492;
           border-radius: 20px;
           height: 0.5rem;
           width: 2rem;
-          background: $publicSpeakingOrange;
+          background: $gold;
         }
       }
       ul {
@@ -305,9 +296,8 @@ $publicSpeakingOrange: #cac492;
           font-weight: normal;
           font-size: 22px;
           line-height: 27px;
-          text-transform: capitalize;
           color: #000000;
-          list-style: url(../../Assets/icons/orangeHyphen.svg);
+          list-style: url(../../Assets/icons/hyphen.svg);
           margin-bottom: 1rem;
         }
       }
