--- a/src/pages/TrainingAndResourcing/TrainingAndResourcing.scss
+++ b/src/pages/TrainingAndResourcing/TrainingAndResourcing.scss
@@ -2,7 +2,7 @@
 @import '../../constants/scss/variables';
 @import '../../constants/scss/mixins';
 
-$pink: #cac492;
+$gold: #cac492;
 $DM: 'DM Serif Display', serif;
 $Archivo: 'Archivo', sans-serif;
 
@@ -25,7 +25,7 @@ $Archivo: 'Archivo', sans-serif;
       .quote_dash {
         height: 0.75rem;
         width: 50px;
-        background: $pink;
+        background: $gold;
         margin-right: 1rem;
       }
       #quoteSource {
@@ -35,7 +35,6 @@ $Archivo: 'Archivo', sans-serif;
     }
     #quote {
       font-family: $DM;
-      text-transform: capitalize;
       font-size: 78px;
       font-weight: normal;
       //   max-width: 90%;
@@ -48,13 +47,12 @@ $Archivo: 'Archivo', sans-serif;
       font-weight: normal;
       font-size: 22px;
       line-height: 31px;
-      text-transform: capitalize;
       width: 80%;
       color: rgba(0, 0, 0, 0.66);
       margin-bottom: 3rem;
     }
     #watchStory {
-      background: $pink;
+      background: $gold;
       height: 64px;
       width: 365px;
       display: flex;
@@ -98,19 +96,19 @@ $Archivo: 'Archivo', sans-serif;
   border-radius: 10px;
 
   .bgLayer {
-    background: #cac49285;
+    background: $gold;
     width: 100%;
     padding: 1rem 2rem;
     border-radius: 10px;
-    padding-bottom: 10rem;
+    padding-bottom: 4rem;
   }
-  #heartIcon {
-    height: 100px;
-    width: 100px;
-    background: url(../../Assets/icons/tealHeartIcon.svg);
-    @include BGConfig(100%, center);
-    // margin-top: 6rem;
-  }
+  // #heartIcon {
+  //   height: 100px;
+  //   width: 100px;
+  //   background: url(../../Assets/icons/tealHeartIcon.svg);
+  //   @include BGConfig(100%, center);
+  //   // margin-top: 6rem;
+  // }
 
   p {
     font-family: $Archivo;
@@ -118,7 +116,6 @@ $Archivo: 'Archivo', sans-serif;
     font-weight: normal;
     font-size: 26.4px;
     line-height: 47.2px;
-    text-transform: capitalize;
     color: #ffffff;
     margin: 2rem 0;
   }
@@ -131,14 +128,13 @@ $Archivo: 'Archivo', sans-serif;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.178);
   border-radius: 12px;
   padding: 1rem 2rem;
-  margin: -8rem 0 0 2rem;
+  margin: -4rem 0 0 2rem;
   p {
     font-family: $Archivo;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 24px;
-    text-transform: capitalize;
     margin-bottom: 2rem;
   }
   ul {
@@ -147,7 +143,6 @@ $Archivo: 'Archivo', sans-serif;
       font-weight: normal;
       font-size: 23px;
       line-height: 41px;
-      text-transform: capitalize;
       color: rgba(0, 0, 0, 0.49);
       list-style: outside;
       margin-bottom: 2rem;
@@ -159,7 +154,6 @@ $Archivo: 'Archivo', sans-serif;
     font-weight: normal;
     font-size: 48px;
     line-height: 55px;
-    text-transform: capitalize;
     color: #000000;
     position: relative;
     margin-bottom: 3rem;
@@ -171,7 +165,7 @@ $Archivo: 'Archivo', sans-serif;
       bottom: -1rem;
       width: 50px;
       height: 10px;
-      background: $pink;
+      background: $gold;
       border-radius: 10px;
     }
   }
@@ -182,7 +176,7 @@ $Archivo: 'Archivo', sans-serif;
     align-items: center;
     width: 469px;
     height: 76px;
-    background: $pink;
+    background: $gold;
     border-radius: 900px;
     color: white;
     cursor: pointer;
@@ -191,7 +185,6 @@ $Archivo: 'Archivo', sans-serif;
     font-weight: 500;
     font-size: 25px;
     line-height: 31px;
-    text-transform: capitalize;
     color: #ffffff;
   }
 }
@@ -203,7 +196,7 @@ $Archivo: 'Archivo', sans-serif;
     // width: 50%;
     min-width: 801px;
     height: 763px;
-    background: $pink;
+    background: $gold;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     padding: 2rem;
@@ -213,7 +206,6 @@ $Archivo: 'Archivo', sans-serif;
       font-weight: normal;
       font-size: 55px;
       line-height: 55px;
-      text-transform: capitalize;
       margin-bottom: 2rem;
     }
     p {
@@ -221,7 +213,6 @@ $Archivo: 'Archivo', sans-serif;
       font-weight: normal;
       font-size: 23px;
       line-height: 33px;
-      text-transform: capitalize;
       color: #ffffff;
     }
     ul {
@@ -232,7 +223,6 @@ $Archivo: 'Archivo', sans-serif;
         font-weight: normal;
         font-size: 23px;
         line-height: 52px;
-        text-transform: capitalize;
         margin-bottom: 1rem;
         margin-left: 1rem;
       }
@@ -245,7 +235,6 @@ $Archivo: 'Archivo', sans-serif;
       font-weight: normal;
       font-size: 55px;
       line-height: 63px;
-      text-transform: capitalize;
       color: #000000;
       margin-bottom: 3rem;
       position: relative;
@@ -257,7 +246,7 @@ $Archivo: 'Archivo', sans-serif;
         border-radius: 20px;
         height: 0.5rem;
         width: 2rem;
-        background: $pink;
+        background: $gold;
       }
     }
     p {
@@ -265,7 +254,6 @@ $Archivo: 'Archivo', sans-serif;
       font-weight: normal;
       font-size: 23px;
       line-height: 33px;
-      text-transform: capitalize;
       margin-bottom: 1rem;
     }
     ul {
@@ -273,9 +261,8 @@ $Archivo: 'Archivo', sans-serif;
         font-weight: normal;
         font-size: 22px;
         line-height: 27px;
-        text-transform: capitalize;
         color: #000000;
-        list-style: url(../../Assets/icons/pinkHyphen.svg);
+        list-style: url(../../Assets/icons/hyphen.svg);
         margin-bottom: 1rem;
         margin-left: 1rem;
       }
@@ -285,8 +272,8 @@ $Archivo: 'Archivo', sans-serif;
 
 #CourseDistributionCard {
   margin: 6rem auto;
-  #pinkTag {
-    background: $pink;
+  #goldTag {
+    background: $gold;
     width: 100px;
     height: 36px;
   }
@@ -303,7 +290,6 @@ $Archivo: 'Archivo', sans-serif;
     font-weight: normal;
     font-size: 23px;
     line-height: 33px;
-    text-transform: capitalize;
     color: #000000;
     margin-top: -1.25rem;
   }
