--- a/src/Components/PopUp/Popup.scss
+++ b/src/Components/PopUp/Popup.scss
@@ -1,5 +1,5 @@
 $Archivo: 'Archivo', sans-serif;
-$teal: #009b9b;
+$teal: #009ba7;
 
 #bg_Blur {
   display: none;
@@ -7,7 +7,7 @@ $teal: #009b9b;
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 155, 167, 0.56);
+  background: hsla(184, 100%, 33%, 0.589);
   position: fixed;
   top: 0;
   left: 0;
