--- a/src/Scss/_variables.scss
+++ b/src/Scss/_variables.scss
@@ -2,7 +2,7 @@
 $DM: 'DM Serif Display', serif;
 $Archivo: 'Archivo', sans-serif;
 
-$teal: #009b9b;
+$teal: #009ba7;
 $grey: #a9a6a6;
 $blue: #0aa7ff;
 $purple: #ff0ac9;
