--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;700&family=DM+Serif+Display&display=swap');
 $DM: 'DM Serif Display', serif;
 $Archivo: 'Archivo', sans-serif;
-$teal: #009b9b;
+$teal: #009ba7;
 $grey: #a9a6a6;
 $blue: #0aa7ff;
 $purple: #ff0ac9;
@@ -273,7 +273,7 @@ $oakGold: #cac492;
             position: absolute;
             left: 0;
             top: 0;
-            background: #009b9b82;
+            background: #009ba782;
             border-radius: 300px 300px 0 0;
             height: 500px;
             width: 500px;
