--- a/src/pages/Carers/Carers.scss
+++ b/src/pages/Carers/Carers.scss
@@ -6,7 +6,7 @@
 $DM: 'DM Serif Display', serif;
 $Archivo: 'Archivo', sans-serif;
 
-$teal: #009b9b;
+$teal: #009ba7;
 $grey: #a9a6a6;
 $carersPrimaryColor: #cac492;
 $purple: #ff0ac9;
