--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -59,6 +59,14 @@ $oakGold: #cac492;
         line-height: 100px;
         letter-spacing: normal;
       }
+      .homepageCallToAction {
+        width: 65%;
+        height: 170px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-content: space-between;
+      }
     }
 
     .introVideoButton {
