--- a/src/pages/Carers/Carers.scss
+++ b/src/pages/Carers/Carers.scss
@@ -98,10 +98,22 @@ $yellow: #ffba0a;
 }
 
 #Carer_goals {
-  background: url(../../Assets/images/carers.jpg);
+  // background: url(../../Assets/images/carers.jpg);
   @include BGConfig(120%, center);
   height: max-content;
   border-radius: 10px;
+
+  #forSiblings {
+    padding: 2rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    iframe {
+      border-radius: 10px;
+      margin: 1rem 0;
+    }
+  }
 
   .bgLayer {
     background: $carersPrimaryColor;
